[gd_scene load_steps=14 format=1]

[ext_resource path="res://rcos_core/zem_gui/taskbar_item.gd" type="Script" id=1]
[ext_resource path="res://data_router/icons/32/host_icon_frame.png" type="Texture" id=2]
[ext_resource path="res://rcos_core/fonts/teko/Teko-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://rcos_core/fonts/teko/Teko-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.195313, 0.195313, 0.195313, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.8, 0.8, 0.8, 1 )
light_color = Color( 0.192157, 0.192157, 0.192157, 1 )
dark_color = Color( 0.6, 0.6, 0.6, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=3]

font/size = 16
extra_spacing/char = 1
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=9]

font/size = 18
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="taskbar_item" type="ReferenceFrame"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 44.0
margin/bottom = 44.0
script/script = ExtResource( 1 )

[node name="square" type="ReferenceFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 0.0
margin/right = 1.0
margin/bottom = 1.0

[node name="button_up" type="Panel" parent="square"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="button_down" type="Panel" parent="square"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 2 )

[node name="task_color" type="ColorFrame" parent="square"]

visibility/self_opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0, 0, 0, 0 )

[node name="icon_box" type="Control" parent="square"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="frame" type="TextureFrame" parent="square/icon_box"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="icon" type="TextureFrame" parent="square/icon_box"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="label" type="Label" parent="square/icon_box"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = ":3"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="square"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="title" type="Label" parent="."]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -175.0
margin/top = 5.0
margin/right = -4.0
margin/bottom = 3.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
text = "Window Title"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


